# python_django

./: .gitignore  pyproject.toml
DRF/: requirements.txt
DRF/mysite/shopapp/: forms.py  serializers.py  urls.py  views.py
Django_Cache/mysite/shopapp/: forms.py  urls.py  views.py
Docs/: requirements.txt
Docs/mysite/mysite/: settings.py  urls.py
Files/: requirements.txt
Files/mysite/myauth/: forms.py  models.py  urls.py  views.py
Files/mysite/mysite/: settings.py  urls.py
M_02_DjangoIntro/mysite/mysite/: settings.py  urls.py
M_02_DjangoIntro/mysite/shopapp/: urls.py  views.py
M_03_DatabaseAndModels/mysite/mysite/: settings.py  urls.py
M_03_DatabaseAndModels/mysite/shopapp/: models.py  urls.py  views.py
M_04_DjangoAdmin/mysite/mysite/: settings.py  urls.py
M_04_DjangoAdmin/mysite/shopapp/: admin_mixins.py
M_05_RequestsAndMiddlewares/mysite/mysite/: settings.py  test  urls.py
M_05_RequestsAndMiddlewares/mysite/requestandmiddlewaresapp/: apps.py  middlewares.py  urls.py  views.py
M_06_Forms/mysite/shopapp/: forms.py  urls.py  (+1 more)
M_08_Auth/: requirements.txt
M_09_permissions/mysite/: db 2.sqlite3
Testing/mysite/: orders-fixture.json  products-fixture.json  users-fixture.json
import_export/mysite/: order.csv  orders-fixture.json  orders.csv
logging/: docker-compose.yaml  env  requirements.txt
logging/mysite/: log.txt
mobile_expert/: manage.py
mobile_expert/mobile_expert/: asgi.py  settings.py  urls.py  wsgi.py
prod/: Dockerfile  docker-compose.yaml  pyproject.toml
prod/mysite/mysite/: settings.py
prod/mysite/shopapp/: forms.py
(+107 files in other folders)
