[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["Igor Ponomarev <9129910001@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
django-stubs = "^4.2.1"
django-types = "^0.17.0"
pillow = "^10.0.1"
djangorestframework = "^3.14.0"
django-filter = "^23.4"
drf-spectacular = "^0.26.5"
django-debug-toolbar = "^4.2.0"
sentry-sdk = {extras = ["django"], version = "^1.38.0"}
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
